Switch use of CSS display attribute to visibility to avoid 'popping' of long document titles onto next row on Actions hover event
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@71681 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/js/alfresco/renderers/css/Actions.css
+++ b/root/projects/slingshot/source/web/js/alfresco/renderers/css/Actions.css
@@ -1,8 +1,8 @@
 .alfresco-documentlibrary-views-layout-_MultiItemRendererMixin--item:hover .alfresco-renderers-Actions.hover-only > div,
 .alfresco-documentlibrary-views-layout-_MultiItemRendererMixin--item .alfresco-renderers-Actions.hover-only > div.dijitSelected {
-   display: block;
+   visibility: visible;
 }
 
 .alfresco-documentlibrary-views-layout-_MultiItemRendererMixin--item .alfresco-renderers-Actions.hover-only > div {
-   display: none;
+   visibility: hidden;
 }
